New home design

--- a/static/MetersToFeet.html
+++ b/static/MetersToFeet.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Meters To Feet</title>
 </head>
 <body>
-    <div>
-        <label>Meters</label>
-        <input id="number-feet-meters" type="number" placeholder="Meters">
-        <p id="message-feet-meters"></p>
-        <button id="btn-meters-feet">Calculate</button>
+    <div class="modal-container" id="modal_container">
+        <div class="modal">
+            <label>Meters</label>
+            <input id="number-feet-meters" type="number" placeholder="Meters">
+            <p id="message-feet-meters"></p>
+            <button id="btn-meters-feet">Calculate</button>
+        </div>
     </div>
     <script src="../js/MetersToFeet.js"></script>
 </body>
