--- a/index.html
+++ b/index.html
@@ -5,25 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.scss">
+    <link rel="shortcut icon" href="images/transfer.ico" type="image/x-icon">
     <title>Home</title>
 </head>
 <body>
-    <header>
-        <h1>Conversions</h1>
+    <header class="info-title">
+        <div class="content-title">
+            <h1>Conversions</h1>
+        </div>
     </header>
-    <main>
-        <a href="static/MetersToCentimeters.html" target="__blank">Meters To Centimeters</a><br>
-        <a href="static/InchesToCentimeters.html" target="__blank">Inches To Centimeters</a><br>
-        <a href="static/MetersToMillimeters.html" target="__blank">Meters To Millimeters</a><br>
-        <a href="static/FeetToCentimeters.html" target="__blank">Feet To Centimeters</a><br>
-        <a href="static/KilometersToMeters.html" target="__blank">Kilometers To Meters</a><br>
-        <a href="static/CentimetersToMillimeters.html" target="__blank">Centimeters To Millimeters</a><br>
-        <a href="static/MetersToFeet.html" target="__blank">Meters To Feet</a><br>
-        <a href="static/MetersToYards.html" target="__blank">Meters To Yards</a><br>
-        <a href="static/FeetToInches.html" target="__blank">Feet To Inches</a><br>
+    <main >
+        <div class="container-links-pages">
+            <button class="btn"><a href="static/MetersToFeet.html" target="__blank">Meters To Feet</a></button>
+            <button class="btn"><a href="static/MetersToYards.html" target="__blank">Meters To Yards</a></button>
+            <button class="btn"><a href="static/MetersToCentimeters.html" target="__blank">Meters To Centimeters</a></button>
+            <button class="btn"><a href="static/MetersToMillimeters.html" target="__blank">Meters To Millimeters</a></button>
+            <button class="btn"><a href="static/InchesToCentimeters.html" target="__blank">Inches To Centimeters</a></button>
+            <button class="btn"><a href="static/FeetToCentimeters.html" target="__blank">Feet To Centimeters</a></button>
+            <button class="btn"><a href="static/KilometersToMeters.html" target="__blank">Kilometers To Meters</a></button>
+            <button class="btn"> <a href="static/KilometersToMeters.html" target="__blank">Kilometers To Meters</a></button>            
+            <button class="btn"><a href="static/FeetToInches.html" target="__blank">Feet To Inches</a></button>
+            <button class="btn"><a href="static/MilesToKilometers.html" target="__blank">Miles To Kilometers</a></button>
+            <button class="btn"><a href="static/GallonsToLiters.html" target="__blank">Gallons To Liters</a></button>
+            <button class="btn"><a href="static/LiterToCubicCentimeter.html" target="__blank">Liter To Cubic Centimeter</a></button>
+            <button class="btn"><a href="static/PoundsToGrams.html" target="__blank">Pounds To Grams</a></button>
+            <button class="btn"><a href="static/KilogramsToPounds.html" target="__blank">Kilograms To Pounds</a></button>
+        </div>
     </main>
-    <footer>
-        <h3>Juan Pablo Patiño &copy; 2022. Conversions, All Right Reserved.</h3>
+    <footer class="container-footer">
+        <div class="content-creator">
+            <h3>Juan Pablo Patiño &copy; 2022. Conversions, All Right Reserved.</h3>
+            <div class="accounts">
+                <a href="https://www.instagram.com/juanflorez13/" target="__blank"><img src="images/instagram.png" alt="Instagram"></a>
+                <a href="https://www.facebook.com/juanflorez13/" target="__blank"><img src="images/facebook.png" alt="Facebook"></a>
+                <a href="https://github.com/JuanFlorez1326" target="__blank"><img src="images/github.png" alt="GitHub"></a>
+                <a href="https://www.linkedin.com/in/juanflorez1326/" target="__blank"><img src="images/linkedin.png" alt="LinkedIn"></a>
+            </div>
+        </div>
     </footer>
     
     <script src="app.js"></script>  
