Create Design to Meters To Centimeters

--- a/static/MetersToCentimeters.html
+++ b/static/MetersToCentimeters.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meter One Centimeter</title>
+    <link rel="stylesheet" href="../css/styleSections.css">
 </head>
 <body>
-    <div>
-        <label>Meters</label>
-        <input id="number-one" type="number" placeholder="Number">
-        <p id="message"></p>
-        <button id="btn-calculate">Calculate</button>
+    <div class="container-card">
+        <h1 class="title">Meters To Centimeters</h1>
+        <div class="card-section">
+            <label class="subtitle">Meters</label>
+            <input class="text" id="number-one" type="number" placeholder="Number">
+            <p class="msg" id="message"></p>
+            <button class="btn" id="btn-calculate">Calculate</button>
+        </div>
     </div>
     <script src='../js/MetersToCentimeters.js'></script>
 </body>
