Design to conversion cards

--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style.scss">
     <link rel="shortcut icon" href="images/transfer.ico" type="image/x-icon">
     <title>Home</title>
 </head>
 <body>
     <header class="info-title">
         <div class="content-title">
-            <h1>Conversions</h1>
+            <a href="index.html"><h1>Conversions</h1></a>
         </div>
     </header>
     <main >
@@ -23,14 +22,14 @@
             <button class="btn"><a href="static/MetersToMillimeters.html" target="__blank">Meters To Millimeters</a></button>
             <button class="btn"><a href="static/InchesToCentimeters.html" target="__blank">Inches To Centimeters</a></button>
             <button class="btn"><a href="static/FeetToCentimeters.html" target="__blank">Feet To Centimeters</a></button>
-            <button class="btn"><a href="static/KilometersToMeters.html" target="__blank">Kilometers To Meters</a></button>
-            <button class="btn"> <a href="static/KilometersToMeters.html" target="__blank">Kilometers To Meters</a></button>            
+            <button class="btn"><a href="static/KilometersToMeters.html" target="__blank">Kilometers To Meters</a></button>         
             <button class="btn"><a href="static/FeetToInches.html" target="__blank">Feet To Inches</a></button>
             <button class="btn"><a href="static/MilesToKilometers.html" target="__blank">Miles To Kilometers</a></button>
             <button class="btn"><a href="static/GallonsToLiters.html" target="__blank">Gallons To Liters</a></button>
             <button class="btn"><a href="static/LiterToCubicCentimeter.html" target="__blank">Liter To Cubic Centimeter</a></button>
             <button class="btn"><a href="static/PoundsToGrams.html" target="__blank">Pounds To Grams</a></button>
             <button class="btn"><a href="static/KilogramsToPounds.html" target="__blank">Kilograms To Pounds</a></button>
+            <button class="btn"><a href="static/CentimetersToMillimeters.html" target="__blank">Centimeters To Millimeters</a></button>
         </div>
     </main>
     <footer class="container-footer">
