--- a/static/MetersToFeet.html
+++ b/static/MetersToFeet.html
@@ -6,16 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <title>Meters To Feet</title>
+    <link rel="stylesheet" href="../css/styleSections.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+    <header class="info-title">
+        <div class="content-title">
+            <a href="../index.html"><h1>Conversions</h1></a>
+        </div>
+    </header>
     <div class="modal-container" id="modal_container">
-        <div class="modal">
-            <label>Meters</label>
-            <input id="number-feet-meters" type="number" placeholder="Meters">
-            <p id="message-feet-meters"></p>
-            <button id="btn-meters-feet">Calculate</button>
+        <div class="container-card">
+            <h1 class="title">Meters To Feet</h1>
+            <div class="card-section">
+                <label>Meters</label>
+                <input id="number-feet-meters" type="number" placeholder="Meters">
+                <p id="message-feet-meters"></p>
+                <button id="btn-meters-feet">Calculate</button>
+            </div>
         </div>
     </div>
+    <footer class="container-footer">
+        <div class="content-creator">
+            <h3>Juan Pablo Patiño &copy; 2022. Conversions, All Right Reserved.</h3>
+            <div class="accounts">
+                <a href="https://www.instagram.com/juanflorez13/" target="__blank"><img src="../images/instagram.png" alt="Instagram"></a>
+                <a href="https://www.facebook.com/juanflorez13/" target="__blank"><img src="../images/facebook.png" alt="Facebook"></a>
+                <a href="https://github.com/JuanFlorez1326" target="__blank"><img src="../images/github.png" alt="GitHub"></a>
+                <a href="https://www.linkedin.com/in/juanflorez1326/" target="__blank"><img src="../images/linkedin.png" alt="LinkedIn"></a>
+            </div>
+        </div>
+    </footer>
     <script src="../js/MetersToFeet.js"></script>
 </body>
 </html>
