--- a/static/InchesToCentimeters.html
+++ b/static/InchesToCentimeters.html
@@ -4,15 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inches</title>
+    <title>Inches To Centimeters</title>
+    <link rel="stylesheet" href="../css/styleSections.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <div>
-        <label>Inches</label>
-        <input id="number-inches" type="text" placeholder="Inches">
-        <p id="message-inches"></p>
-        <button id="btn-inches">Calculate</button>
+    <header class="info-title">
+        <div class="content-title">
+            <a href="../index.html"><h1>Conversions</h1></a>
+        </div>
+    </header>
+    <div class="container-card">
+        <h1 class="title">Inches To Centimeters</h1>
+        <div class="card-section">
+            <label>Inches</label>
+            <input id="number-inches" type="text" placeholder="Inches">
+            <p id="message-inches"></p>
+            <button id="btn-inches">Calculate</button>
+        </div>
     </div>
+    <footer class="container-footer">
+        <div class="content-creator">
+            <h3>Juan Pablo Patiño &copy; 2022. Conversions, All Right Reserved.</h3>
+            <div class="accounts">
+                <a href="https://www.instagram.com/juanflorez13/" target="__blank"><img src="../images/instagram.png" alt="Instagram"></a>
+                <a href="https://www.facebook.com/juanflorez13/" target="__blank"><img src="../images/facebook.png" alt="Facebook"></a>
+                <a href="https://github.com/JuanFlorez1326" target="__blank"><img src="../images/github.png" alt="GitHub"></a>
+                <a href="https://www.linkedin.com/in/juanflorez1326/" target="__blank"><img src="../images/linkedin.png" alt="LinkedIn"></a>
+            </div>
+        </div>
+    </footer>
     <script src="../js/InchesToCentimeters.js"></script>
 </body>
 </html>
